@@ -1,558 +1,215 @@
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * AVL平衡二叉树
- *
- * @author ronglexie
- * @version 2018/9/1
- */
-class AVLTree<K extends Comparable<K>,V> {
+class AVLTree1 {
+    class Node {
+        int key;
+        int height;
+        Node left, right;
 
-    Node root;
-    int size;
-
-    public AVLTree() {
-        root = null;
-        size = 0;
-    }
-
-    /**
-     * 获取某个节点的高度
-     *
-     * @param node
-     * @return int
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    private int getHeight(Node node) {
-        if (node == null) {
-            return 0;
-        }
-        return node.height;
-    }
-
-    /**
-     * 获取某个节点的平衡因子
-     *
-     * @param node
-     * @return int
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    private int getBalanceFactor(Node node) {
-        if (node == null) {
-            return 0;
-        }
-        return getHeight(node.left) - getHeight(node.right);
-    }
-
-    /**
-     * 查看AVL平衡二叉树是否是二分搜索树
-     *
-     * @param
-     * @return boolean
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    private boolean isBinarySearchTree() {
-        ArrayList<K> keys = new ArrayList<>();
-        inOrder(root, keys);
-        for (int i = 1; i < keys.size(); i++) {
-            if (keys.get(i - 1).compareTo(keys.get(i)) > 0) {
-                return false;
-            }
-        }
-        return true;
-    }
-
-    /**
-     * 查看AVL平衡二叉树是否是平衡二叉树
-     *
-     * @return boolean
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    private boolean isBalanced() {
-        return isBalanced(root);
-    }
-
-    /**
-     * 递归查看以node为根节点的AVL平衡二叉树是否是平衡二叉树
-     *
-     * @param node
-     * @return boolean
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    private boolean isBalanced(Node node) {
-        if (node == null) {
-            return true;
-        }
-        int balanceFactor = getBalanceFactor(node);
-        if (Math.abs(balanceFactor) > 1) {
-            return false;
-        }
-        return isBalanced(node.left) && isBalanced(node.right);
-    }
-
-    // 对节点y进行向右旋转操作，返回旋转后新的根节点x
-    //        y                              x
-    //       / \                           /   \
-    //      x   T4     向右旋转 (y)        z     y
-    //     / \       - - - - - - - ->    / \   / \
-    //    z   T3                       T1  T2 T3 T4
-    //   / \
-    // T1   T2
-
-    /**
-     * 右旋转操作
-     *
-     * @param y
-     * @return AVLTree<K, V>.Node
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    private Node rightRotate(Node y) {
-        Node x = y.left;
-        Node T3 = x.right;
-
-        //右旋转操作
-        x.right = y;
-        y.left = T3;
-
-        //更新height
-        y.height = Math.max(getHeight(y.left), getHeight(y.right)) + 1;
-        x.height = Math.max(getHeight(x.left), getHeight(x.right)) + 1;
-        return x;
-    }
-
-    // 对节点y进行向左旋转操作，返回旋转后新的根节点x
-    //    y                             x
-    //  /  \                          /   \
-    // T1   x      向左旋转 (y)       y     z
-    //     / \   - - - - - - - ->   / \   / \
-    //   T2  z                     T1 T2 T3 T4
-    //      / \
-    //     T3 T4
-
-    /**
-     * 左旋转操作
-     *
-     * @param y
-     * @return AVLTree<K, V>.Node
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    private Node leftRotate(Node y) {
-        Node x = y.right;
-        Node T2 = x.left;
-
-        //左旋转操作
-        x.left = y;
-        y.right = T2;
-
-        //更新height
-        y.height = Math.max(getHeight(y.left), getHeight(y.right)) + 1;
-        x.height = Math.max(getHeight(x.left), getHeight(x.right)) + 1;
-        return x;
-    }
-
-    /**
-     * 中序遍历以node为根节点的AVL平衡二叉树
-     * 深度优先遍历，递归实现
-     *
-     * @param node
-     * @return void
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    private void inOrder(Node node, ArrayList<K> keys) {
-        if (node == null) {
-            return;
-        }
-        inOrder(node.left, keys);
-        keys.add(node.key);
-        inOrder(node.right, keys);
-    }
-
-    /**
-     * 向AVL平衡二叉树中插入元素
-     *
-     * @param key
-     * @param value
-     * @return void
-     * @author ronglexie
-     * @version 2018/9/1
-     */
-    public void add(K key, V value) {
-        root = add(root, key, value);
-    }
-
-    /**
-     * 向node为根元素的AVL平衡二叉树中插入元素
-     * 递归算法
-     *
-     * @param node
-     * @param key
-     * @param value
-     * @return void
-     * @author ronglexie
-     * @version 2018/8/19
-     */
-    private Node add(Node node, K key, V value) {
-        //递归终止条件，返回结果为null
-        if (node == null) {
-            size++;
-            return new Node(key, value);
-        }
-
-        if (key.compareTo(node.key) < 0) {
-            node.left = add(node.left, key, value);
-        } else if (key.compareTo(node.key) > 0) {
-            node.right = add(node.right, key, value);
-        } else {
-            node.value = value;
-        }
-
-        /**========== 维护平衡 Start ==========*/
-        //更新Height
-        node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
-        //计算平衡因子
-        int balanceFactor = getBalanceFactor(node);
-        //LL左孩子节点的左侧产生不平衡
-        if (balanceFactor > 1 && getBalanceFactor(node.left) >= 0) {
-            //右旋转操作
-            return rightRotate(node);
-        }
-        //RR右孩子节点的右侧产生不平衡
-        if (balanceFactor < -1 && getBalanceFactor(node.right) <= 0) {
-            //左旋转操作
-            return leftRotate(node);
-        }
-        //LR左孩子节点的右侧产生不平衡
-        if (balanceFactor > 1 && getBalanceFactor(node.left) < 0) {
-            node.left = leftRotate(node.left);
-            //右旋转操作
-            return rightRotate(node);
-        }
-        //RL右孩子节点的左侧产生不平衡
-        if (balanceFactor < -1 && getBalanceFactor(node.right) > 0) {
-            node.right = rightRotate(node.right);
-            //右旋转操作
-            return leftRotate(node);
-        }
-        /**========== 维护平衡 End ==========*/
-        return node;
-    }
-
-    /**
-     * 查找AVL平衡二叉树的最小值
-     *
-     * @param
-     * @return V
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    public V minimum() {
-        if (isEmpty()) {
-            throw new IllegalArgumentException("BinarySearchTree is empty !");
-        }
-        return minimum(root).value;
-    }
-
-    /**
-     * 查找以node为根节点AVL平衡二叉树的最小节点
-     * 深度优先遍历，递归实现
-     *
-     * @param node
-     * @return BinarySearchTree<E>.Node
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    private Node minimum(Node node) {
-        if (isEmpty()) {
-            throw new IllegalArgumentException("BinarySearchTree is empty !");
-        }
-        if (node.left == null) {
-            return node;
-        }
-        return minimum(node.left);
-    }
-
-    /**
-     * 查找AVL平衡二叉树的最大值
-     *
-     * @param
-     * @return V
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    public V maximize() {
-        if (isEmpty()) {
-            throw new IllegalArgumentException("BinarySearchTree is empty !");
-        }
-        return maximize(root).value;
-    }
-
-    /**
-     * 查找以node为根节点AVL平衡二叉树的最大节点
-     * 深度优先遍历，递归实现
-     *
-     * @param node
-     * @return BinarySearchTree<E>.Node
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    private Node maximize(Node node) {
-        if (isEmpty()) {
-            throw new IllegalArgumentException("BinarySearchTree is empty !");
-        }
-        if (node.right == null) {
-            return node;
-        }
-        return minimum(node.right);
-    }
-
-    /**
-     * 删除AVL平衡二叉树的最大值
-     *
-     * @param
-     * @return V
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    public V removeMax() {
-        V maximize = maximize();
-        removeMax(root);
-        return maximize;
-    }
-
-    /**
-     * 删除以node为根的AVL平衡二叉树的最大节点
-     * 深度优先遍历，递归实现
-     *
-     * @param node
-     * @return BinarySearchTree<E>.Node
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    private Node removeMax(Node node) {
-        if (node.right == null) {
-            Node leftNode = node.left;
-            node.left = null;
-            size--;
-            return leftNode;
-        }
-        node.right = removeMin(node.right);
-        return node;
-    }
-
-    /**
-     * 删除AVL平衡二叉树的最小值
-     *
-     * @param
-     * @return BinarySearchTree<E>.Node
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    public V removeMin() {
-        V minimum = minimum();
-        removeMin(root);
-        return minimum;
-    }
-
-    /**
-     * 删除以node为根的AVL平衡二叉树的最小节点
-     * 深度优先遍历，递归实现
-     *
-     * @param node
-     * @return BinarySearchTree<E>.Node
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    private Node removeMin(Node node) {
-        if (node.left == null) {
-            Node rightNode = node.right;
-            node.right = null;
-            size--;
-            return rightNode;
-        }
-        node.left = removeMin(node.left);
-        return node;
-    }
-
-    public V remove(K key) {
-        Node node = getNode(root, key);
-        if (node != null) {
-            root = remove(root, key);
-            return node.value;
-        }
-        return null;
-    }
-
-    /**
-     * 删除以node为根的AVL平衡二叉树中的指定元素
-     * 深度优先遍历，递归实现
-     *
-     * @param node
-     * @param key
-     * @return BinarySearchTree<E>.Node
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    private Node remove(Node node, K key) {
-        if (node == null) {
-            return null;
-        }
-
-        Node resultNode;
-
-        if (key.compareTo(node.key) < 0) {
-            node.left = remove(node.left, key);
-            resultNode = node;
-        } else if (key.compareTo(node.key) > 0) {
-            node.right = remove(node.right, key);
-            resultNode = node;
-        } else {
-            // 找到待删除的节点
-
-            // 处理只有右子树或没有子树的情况
-            if (node.right == null) {
-                Node leftNode = node.left;
-                node.left = null;
-                size--;
-                resultNode = leftNode;
-            }
-            // 处理只有左子树的情况
-            else if (node.left == null) {
-                Node rightNode = node.right;
-                node.right = null;
-                size--;
-                resultNode = rightNode;
-            }
-            // 处理有左子树和右子树的情况
-            else {
-                // 使用左子树的最大节点替代当前节点
-                Node predecessor = maximize(node.left);
-                predecessor.left = remove(node.left, predecessor.key);  // 删除左子树中的最大节点
-                predecessor.right = node.right;
-
-                // 将待删除节点的左右子节点置为空
-                node.left = node.right = null;
-
-                resultNode = predecessor;
-            }
-        }
-
-        // 维护平衡
-        if (resultNode == null) {
-            return null;
-        }
-
-        // 更新高度
-        resultNode.height = 1 + Math.max(getHeight(resultNode.left), getHeight(resultNode.right));
-
-        // 计算平衡因子
-        int balanceFactor = getBalanceFactor(resultNode);
-
-        // LL
-        if (balanceFactor > 1 && getBalanceFactor(resultNode.left) >= 0) {
-            return rightRotate(resultNode);
-        }
-
-        // RR
-        if (balanceFactor < -1 && getBalanceFactor(resultNode.right) <= 0) {
-            return leftRotate(resultNode);
-        }
-
-        // LR
-        if (balanceFactor > 1 && getBalanceFactor(resultNode.left) < 0) {
-            resultNode.left = leftRotate(resultNode.left);
-            return rightRotate(resultNode);
-        }
-
-        // RL
-        if (balanceFactor < -1 && getBalanceFactor(resultNode.right) > 0) {
-            resultNode.right = rightRotate(resultNode.right);
-            return leftRotate(resultNode);
-        }
-
-        return resultNode;
-    }
-
-
-    public boolean contains(K key) {
-        return getNode(root, key) != null;
-    }
-
-    public V get(K key) {
-        Node node = getNode(root, key);
-        return node != null ? node.value : null;
-    }
-
-    public void set(K key, V value) {
-        Node node = getNode(root, key);
-        if (node == null) {
-            throw new IllegalArgumentException("Set failed. key is not exists!");
-        }
-        node.value = value;
-    }
-
-    public int getSize() {
-        return size;
-    }
-
-    public boolean isEmpty() {
-        return size == 0;
-    }
-
-    /**
-     * 根据key获取Node
-     *
-     * @param node
-     * @param key
-     * @return map.LinkedListMap<K, V>.Node
-     * @author ronglexie
-     * @version 2018/8/19
-     */
-    public Node getNode(Node node, K key) {
-        if (node == null) {
-            return null;
-        }
-
-        if (key.compareTo(node.key) == 0) {
-            return node;
-        } else if (key.compareTo(node.key) < 0) {
-            return getNode(node.left, key);
-        } else {
-            return getNode(node.right, key);
-        }
-    }
-
-    /**
-     * 节点类
-     *
-     * @author ronglexie
-     * @version 2018/8/18
-     */
-    private class Node {
-        public K key;
-        public V value;
-        public Node left, right;
-        public int height;
-
-        public Node(K key, V value) {
-            this.key = key;
-            this.value = value;
-            left = null;
-            right = null;
+        Node(int d) {
+            key = d;
             height = 1;
         }
+    }
+
+    Node root;
+
+    int height(Node N) {
+        if (N == null)
+            return 0;
+        return N.height;
+    }
+
+    int max(int a, int b) {
+        return (a > b) ? a : b;
+    }
+
+    Node rightRotate(Node y) {
+        Node x = y.left;
+        Node T2 = x.right;
+
+        x.right = y;
+        y.left = T2;
+
+        y.height = max(height(y.left), height(y.right)) + 1;
+        x.height = max(height(x.left), height(x.right)) + 1;
+
+        return x;
+    }
+
+    Node leftRotate(Node x) {
+        Node y = x.right;
+        Node T2 = y.left;
+
+        y.left = x;
+        x.right = T2;
+
+        x.height = max(height(x.left), height(x.right)) + 1;
+        y.height = max(height(y.left), height(y.right)) + 1;
+
+        return y;
+    }
+
+    int getBalance(Node N) {
+        if (N == null)
+            return 0;
+        return height(N.left) - height(N.right);
+    }
+
+    Node insert(Node node, int key) {
+        if (node == null)
+            return new Node(key);
+
+        if (key < node.key)
+            node.left = insert(node.left, key);
+        else if (key > node.key)
+            node.right = insert(node.right, key);
+        else
+            return node;
+
+        node.height = 1 + max(height(node.left), height(node.right));
+
+        int balance = getBalance(node);
+
+        if (balance > 1 && key < node.left.key)
+            return rightRotate(node);
+
+        if (balance < -1 && key > node.right.key)
+            return leftRotate(node);
+
+        if (balance > 1 && key > node.left.key) {
+            node.left = leftRotate(node.left);
+            return rightRotate(node);
+        }
+
+        if (balance < -1 && key < node.right.key) {
+            node.right = rightRotate(node.right);
+            return leftRotate(node);
+        }
+
+        return node;
+    }
+
+    Node minValueNode(Node node) {
+        Node current = node;
+
+        while (current.left != null)
+            current = current.left;
+
+        return current;
+    }
+
+    Node deleteNode(Node root, int key) {
+        if (root == null)
+            return root;
+
+        // 寻找要删除的节点
+        if (key < root.key)
+            root.left = deleteNode(root.left, key);
+        else if (key > root.key)
+            root.right = deleteNode(root.right, key);
+        else {
+            // 找到要删除的节点
+            // Case 1: 节点只有一个子节点或没有子节点
+            if ((root.left == null) || (root.right == null)) {
+                Node temp = null;
+                if (root.left != null)
+                    temp = root.left;
+                else
+                    temp = root.right;
+
+                // 没有子节点的情况
+                if (temp == null) {
+                    temp = root;
+                    root = null;
+                } else // 只有一个子节点的情况
+                    root = temp;
+            } else {
+                // Case 2: 节点有两个子节点，使用左子树的最大值替换
+                Node temp = maxValueNode(root.left);
+
+                // 使用左子树的最大值替换当前节点的值
+                root.key = temp.key;
+
+                // 删除左子树中的最大值节点
+                root.left = deleteNode(root.left, temp.key);
+            }
+        }
+
+        if (root == null)
+            return root;
+
+        // 更新当前节点的高度
+        root.height = max(height(root.left), height(root.right)) + 1;
+
+        // 获取平衡因子
+        int balance = getBalance(root);
+
+        // 如果节点不平衡，则进行旋转操作
+
+        // 左左情况
+        if (balance > 1 && getBalance(root.left) >= 0)
+            return rightRotate(root);
+
+        // 左右情况
+        if (balance > 1 && getBalance(root.left) < 0) {
+            root.left = leftRotate(root.left);
+            return rightRotate(root);
+        }
+
+        // 右右情况
+        if (balance < -1 && getBalance(root.right) <= 0)
+            return leftRotate(root);
+
+        // 右左情况
+        if (balance < -1 && getBalance(root.right) > 0) {
+            root.right = rightRotate(root.right);
+            return leftRotate(root);
+        }
+
+        return root;
+    }
+
+    // 找到左子树的最大值节点
+    Node maxValueNode(Node node) {
+        Node current = node;
+
+        // 左子树的最大值在最右侧
+        while (current.right != null)
+            current = current.right;
+
+        return current;
+    }
+
+
+    Node checkBalance(Node root) {
+        if (root == null)
+            return root;
+
+        root.height = max(height(root.left), height(root.right)) + 1;
+
+        int balance = getBalance(root);
+
+        if (balance > 1 && getBalance(root.left) >= 0)
+            return rightRotate(root);
+
+        if (balance > 1 && getBalance(root.left) < 0) {
+            root.left = leftRotate(root.left);
+            return rightRotate(root);
+        }
+
+        if (balance < -1 && getBalance(root.right) <= 0)
+            return leftRotate(root);
+
+        if (balance < -1 && getBalance(root.right) > 0) {
+            root.right = rightRotate(root.right);
+            return leftRotate(root);
+        }
+        return root;
     }
 
     void preOrder(Node node) {
@@ -578,34 +235,35 @@ class AVLTree<K extends Comparable<K>,V> {
             System.out.print(node.key + " ");
         }
     }
-
 }
+
 public class main {
 
     static List<String> readInputData() throws IOException {
         BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));
         String inputData = reader.readLine();
-//        String inputData = "";
+//        String inputData = //"A1 D1 POST";
+////                "A1 A2 A3 A4 A5 A6 A7 A8 A9 POST";
+////        "D13 D60 D76 D12 A17 D98 A94 D70 D3 A23 A42 D45 A100 D50 A99 A22 A87 A4 A90 D88 A71 A20 D39 D83 A97 A56 D28 A9 D43 A19 D5 A11 A54 A73 D54 A9 A24 A58 D6 D80 A72 A47 A82 A12 A75 D77 D84 D86 A60 D64 D70 D70 A73 A71 A40 D94 D27 A63 D47 A42 A44 A27 A100 A6 D84 A19 D65 A75 A55 A63 A39 D99 A50 D98 A98 D100 D93 A91 A81 D59 D56 D29 D11 D45 D47 D55 D85 D7 D70 A13 A55 A25 D35 D65 A48 D55 A45 D29 A35 A15 IN";
+//        "A88 D77 D95 A78 A71 A2 D9 A2 A60 D80 A85 A65 D11 A30 D8 A68 D87 A28 A88 A96 D29 D26 D88 D47 D68 A65 A86 A100 A61 D7 D76 D21 D24 A40 D94 A84 A16 D28 A45 A60 D34 D14 A68 A64 A74 A62 D99 D2 D34 D32 D60 D52 D19 A95 A28 A91 D24 A34 D22 D77 D7 D78 A3 A100 D95 D53 D82 D64 A55 A46 A17 A70 D4 A25 A75 D71 A30 D50 D44 A11 D39 A47 D77 A71 D1 A98 D51 A63 D15 A15 D75 A4 D14 D77 A9 D84 D70 A5 D67 A22 POST";
         return Arrays.asList(inputData.split(" "));
     }
 
     // 处理输入数据并更新树
-    static void processInputData(List<String> inputs, AVLTree tree) {
+    static void processInputData(List<String> inputs, AVLTree1 tree) {
         for (int i = 0; i < inputs.size() - 1; i++) {
             String operation = inputs.get(i);
             int value = Integer.parseInt(operation.substring(1));
 
             if (operation.charAt(0) == 'A') {
-                tree.add(value, value);
+                tree.root = tree.insert(tree.root, value);
             } else if (operation.charAt(0) == 'D') {
-                tree.remove(value);
+                tree.root = tree.deleteNode(tree.root, value);
             }
-//            tree.postOrder(tree.root);
-//            System.out.println();
         }
 
-        String traversal = inputs.get(inputs.size() - 1);
-        if (tree.isEmpty()) {
+        String traversal = inputs.getLast();
+        if (tree.root == null) {
             System.out.println("EMPTY");
         } else {
             if (traversal.equals("PRE")) {
@@ -620,19 +278,8 @@ public class main {
     }
 
     public static void main(String[] args) throws IOException {
-        AVLTree tree = new AVLTree();
+        AVLTree1 tree = new AVLTree1();
         List<String> inputData = readInputData();
-//        Arrays.asList("A54", "A99", "D60", "A80", "A28", "D4", "D60", "D62", "A76", "A100",
-//                "A34", "A31", "A29", "A31", "D57", "D59", "D95", "D90", "A46", "A91",
-//                "D44", "D81", "A56", "A2", "A84", "A50", "D59", "A47", "D22", "A49",
-//                "A74", "A59", "A15", "D17", "A44", "D77", "D77", "D90", "A94", "A70",
-//                "D83", "D84", "A21", "D82", "D5", "D1", "D27", "D33", "A60", "A55",
-//                "A38", "A36", "A57", "D14", "A50", "A78", "D84", "D30", "A92", "A48",
-//                "D94", "A3", "D3", "A7", "D34", "A96", "D37", "D68", "A58", "A18",
-//                "A26", "A60", "D69", "D33", "A66", "D17", "D64", "D16", "D10", "A14",
-//                "A78", "A8", "A70", "A31", "D40", "D82", "D71", "A14", "A49", "D64",
-//                "A34", "D99", "A35", "A67", "A14", "D43", "D55", "A10", "D66", "A94",
-//                "POST");
         processInputData(inputData, tree); // 处理输入数据并更新树
     }
 }
